--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
             <div class="container">
-                <a class="navbar-brand" href="#page-top">Train With Shubham</a>
+                <a class="navbar-brand" href="#page-top">Zohaib Warraich</a>
                 <button class="navbar-toggler text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars"></i>
@@ -42,7 +42,7 @@
                 <!-- Masthead Heading-->
                 <h1 class="masthead-heading text-uppercase mb-0">
                     <a href="https://bit.ly/tws-junoon" style="text-decoration: none; color: inherit;">
-                        DevOps (Junoon Batch 8) Starts October 5th (Sat-Sun 9 to 12)
+                        A computer science student aspiring to become a DevOps engineer.
                     </a>
                 </h1>
                 <!-- Icon Divider-->
@@ -52,7 +52,7 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Masthead Subheading-->
-                <p class="masthead-subheading font-weight-light mb-0">Engineer - Trainer - Learner</p>
+                <p class="masthead-subheading font-weight-light mb-0">Engineer - Student - Learner</p>
             </div>
         </header>
         <!-- Portfolio Section-->
@@ -138,14 +138,14 @@
                 </div>
                 <!-- About Section Content-->
                 <div class="row">
-                    <div class="col-lg-4 ms-auto"><p class="lead">DevOps Junoon (Batch 8) <br> Starts October 5th (Weekends 9 A.M to 12 P.M)  <br> Covering A-Z of DevOps.</p></div>
-                    <div class="col-lg-4 me-auto"><p class="lead">See you in the Live Sessions. </p></div>
+                    <div class="col-lg-4 ms-auto"><p class="lead">Muhammad Zohaib Warraich <br> A Devops Engineer <br> Bachelor's of Computer Science </p></div>
+                    <div class="col-lg-4 me-auto"><p class="lead">My Portfolio</p></div>
                 </div>
                 <!-- About Section Button-->
                 <div class="text-center mt-4">
                     <a class="btn btn-xl btn-outline-light" href="https://bit.ly/tws-junoon">
                         <i class="fas fa-download me-2"></i>
-                        Checkout Junoon!
+                        Checkout!
                     </a>
                 </div>
             </div>
