--- a/index.html
+++ b/index.html
@@ -229,9 +229,9 @@
                     <div class="col-lg-4 mb-5 mb-lg-0">
                         <h4 class="text-uppercase mb-4">Location</h4>
                         <p class="lead mb-0">
-                            2215 John Daniel Drive
+                            Chenone Road, Faisalabad
                             <br />
-                            Clark, MO 65243
+                            Pakistan
                         </p>
                     </div>
                     <!-- Footer Social Icons-->
@@ -256,7 +256,7 @@
         </footer>
         <!-- Copyright Section-->
         <div class="copyright py-4 text-center text-white">
-            <div class="container"><small>Copyright &copy; TrainWithShubham.com 2024</small></div>
+            <div class="container"><small>Copyright &copy; Zohaibwarraich 2025</small></div>
         </div>
         <!-- Portfolio Modals-->
         <!-- Portfolio Modal 1-->
